-*- text -*-

Version 2.3 (2023-??-??)
-------------------------

* Column name of predict() output changed from "time" to "eval_time"
  for consistency with tidymodels update.

* Default value for t chosen in hr_flexsurvreg.


Version 2.2.2 (2023-01-31)
-------------------------

* Allow unicode characters in vignette, to satisfy R CMD check on
  r-devel.


Version 2.2.1 (2022-12-22)
-------------------------

* New `simulate.flexsurvreg` method to simulate data from a fitted
  flexsurvreg or flexsurvspline model.  Thanks to Mark Clements for
  help with this.

* Fix of bug for summary() method with type = "quantile" or "median"
  and left-truncation in the prediction (start > 0). 

* Correction to the examples and interpretation of Cox-Snell residuals.


Version 2.2 (2022-06-16)
-------------------------

* New function `standsurv` for survival and hazards
  standardised over an observed distribution for covariates. 
  Contributed by Michael Sweeting <mikesweeting79@gmail.com>.
  See the new vignette about it.

* New function `hr_flexsurvreg` to compute the hazard ratio from a
  fitted flexsurvreg or flexsurvspline model as a function of time,
  with confidence intervals.

* `summary.flexsurvreg` has been rewritten to make it cleaner and
  faster.  User-visible changes: 

  - Custom summary functions in `summary.flexsurvreg` must now be
  vectorised.

  - A new argument `cross` specifies whether to compute summaries for
  all combinations of times t and covariate values, or for covariate
  values matched with corresponding times t, in custom summary
  functions.
  
  - Covariate names when `tidy=FALSE` now consistently don't include
  spaces.

* Better handling of NAs in summary and prediction functions. Thanks
  to Matthew Warkentin.

* New functions for Cox-Snell residuals: `coxsnell_flexsurvreg` or
  residuals(..., type="coxsnell").

* rmst_generic, mean_survspline, rmst_survspline and related functions