@@ -64,7 +64,7 @@
 
       <ul class="navbar-nav">
 <li class="nav-item">
-  <a class="external-link nav-link" href="https://github.com/chjackson/flexsurv-dev/" aria-label="github">
+  <a class="external-link nav-link" href="https://github.com/chjackson/flexsurv/" aria-label="github">
     <span class="fab fa fab fa-github fa-lg"></span>
      
   </a>
@@ -93,9 +93,9 @@
 <div class="section level2">
 <h2 id="learn-more">Learn more<a class="anchor" aria-label="anchor" href="#learn-more"></a>
 </h2>
-<p><a href="articles/flexsurv.pdf">User guide (PDF)</a>.</p>
-<p><a href="articles/multistate.pdf">Guide to multi-state modelling in flexsurv</a>.</p>
-<p><a href="reference/index.html">Full reference manual</a> for all the package’s functions.</p>
+<p><a href="https://chjackson.github.io/flexsurv/articles/flexsurv.pdf" class="external-link">User guide (PDF)</a>.</p>
+<p><a href="https://chjackson.github.io/flexsurv/articles/multistate.pdf" class="external-link">Guide to multi-state modelling in flexsurv</a>.</p>
+<p><a href="https://chjackson.github.io/flexsurv/reference/index.html" class="external-link">Full reference manual</a> for all the package’s functions.</p>
 <p><a href="https://www.jstatsoft.org/article/view/v070i08" class="external-link">Paper in Journal of Statistical Software (Jackson 2016)</a>. Mostly the same as the user guide, but not kept up to date.</p>
 </div>
 <div class="section level2">
@@ -113,18 +113,13 @@
 <!-- badges: start -->
 
 </div>
-<div class="section level2">
-<h2 id="help-wanted">Help wanted<a class="anchor" aria-label="anchor" href="#help-wanted"></a>
-</h2>
-<p>… to get a standard Github Actions script for R CMD check working, ideally one which supports LaTeX vignettes!</p>
-</div>
 </div>
   </main><aside class="col-md-3"><div class="links">
 <h2 data-toc-skip>Links</h2>
 <ul class="list-unstyled">
 <li><a href="https://cloud.r-project.org/package=flexsurv" class="external-link">View on CRAN</a></li>
-<li><a href="https://github.com/chjackson/flexsurv-dev/" class="external-link">Browse source code</a></li>
-<li><a href="https://github.com/chjackson/flexsurv-dev/issues" class="external-link">Report a bug</a></li>
+<li><a href="https://github.com/chjackson/flexsurv/" class="external-link">Browse source code</a></li>
+<li><a href="https://github.com/chjackson/flexsurv/issues" class="external-link">Report a bug</a></li>
 </ul>
 </div>
 
@@ -156,6 +151,7 @@
 <ul class="list-unstyled">
 <li><a href="https://lifecycle.r-lib.org/articles/stages.html#stable" class="external-link"><img src="https://img.shields.io/badge/lifecycle-stable-brightgreen.svg" alt="Lifecycle: stable"></a></li>
 <li><a href="https://github.com/chjackson/flexsurv-dev/actions" class="external-link"><img src="https://github.com/chjackson/flexsurv-dev/workflows/R-CMD-check/badge.svg" alt="R-CMD-check"></a></li>
+<li><a href="https://app.codecov.io/gh/chjackson/flexsurv?branch=master" class="external-link"><img src="https://codecov.io/gh/chjackson/flexsurv/branch/master/graph/badge.svg" alt="Codecov test coverage"></a></li>
 </ul>
 </div>
 
